--- a/.github/workflows/cf-deploy.yml
+++ b/.github/workflows/cf-deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to bucket
 
 on:
   push:
-    branches: ['develop', 'master', 'release', 'ci/deployments']
+    branches: ['develop', 'master', 'release', 'ci/deployments', 'deactivate_ssr_test']
 jobs:
   cancel-previous:
     name: 'Cancel Previous Runs'
@@ -22,7 +22,7 @@ jobs:
         id: env_vars # @TODO - consider production deployments?
         run: |
           echo "Running on branch ${{ github.ref }}"
-          if [ "${{ github.ref }}" = "refs/heads/develop" ]; then
+          if [ "${{ github.ref }}" = "refs/heads/deactivate_ssr_test" ]; then
             echo "::set-output name=aws_access_key_id::${{ secrets.DEV_AWS_ACCESS_KEY_ID }}"
             echo "::set-output name=aws_secret_key::${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}"
             echo "::set-output name=aws_region::${{ secrets.AWS_REGION }}"
