--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "disposable-email-domains": "^1.0.59",
     "ethers": "^5.5.3",
     "hardhat": "^2.8.2",
-    "iam-client-lib": "^5.1.0-alpha.17",
+    "iam-client-lib": "^4.2.0",
     "lint-staged": "^12.1.6",
     "luxon": "^2.3.0",
-    "next": "12.0.7",
+    "next": "^12.1.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.2",
